--- a/resources/i18n/en.json
+++ b/resources/i18n/en.json
@@ -1,13 +1,81 @@
 {
 	"@metadata": {
 		"authors": [
-			"Stephan Gambke"
+			"Stephan Gambke",
+		    "Pierre Boutet"
 		]
 	},
+	"wfexplore": "Explore tutorials",
 	"skinname-chameleon": "Chameleon",
 	"chameleon-desc": "The Chameleon skin",
 	"chameleon-loggedin": "You are logged in as $1.",
 	"chameleon-notloggedin": "You are not logged in.",
 	"chameleon-newmessages": "You have new messages.",
-	"chameleon-nonewmessages": "You have no new messages."
+	"chameleon-nonewmessages": "You have no new messages.",
+	"wffooter-subtitle": "You have no new messages.",
+	"wfsearch-newTutorial": "Create a tutorial",
+	"wffooterlinks-about": "About",
+	"wffooter-about": "What is Wikifab?",
+	"wffooterlinks-team": "Team",
+	"wffooter-team": "Team",
+	"wffooterlinks-community": "Community",
+	"wffooter-community": "Community",
+	"wffooterlinks-press": "Press",
+	"wffooter-press": "Press",
+	"wffooterlinks-fablabs": "Fablabs_and_makerspaces",
+	"wffooter-fablabs": "Fablabs and makerspaces",
+	"wffooterlinks-make-a-donation": "Make a donation",
+	"wffooter-make-a-donation": "Make a donation",
+	"wffooterlinks-developers": "Developers",
+	"wffooter-developers": "Developers",
+	"wffootertitle-about": "About",
+	"wffootertitle-hello": "Hello",
+	"wffootertitle-support": "Support",
+	"wffootertitle-discover": "Discover",
+	"wffooterlinks-help": "Help",
+	"wffooter-help": "Help",
+	"wffooterlinks-get-started": "Get_started",
+	"wffooter-get-started": "Get started",
+	"wffooterlinks-privacy-policy": "Privacy_policy",
+	"wffooter-privacy-policy": "Privacy policy",
+	"wffooterlinks-cookie-policy": "Cookie_policy",
+	"wffooter-cookie-policy": "Cookie policy",
+	"wffooterlinks-terms-of-use": "Terms_of_use",
+	"wffooter-terms-of-use": "Terms of use",
+	"wffooterlinks-contact": "Contact_us",
+	"wffooter-contact": "Contact us",
+	"wffooterlinks-categoriename-art": "Art",
+	"wffooter-categoriename-art": "Art",
+	"wffooterlinks-organization": "Organization",
+	"wffooter-organization": "Organization",
+	"wffooterlinks-categoriename-clothing-accessories": "Clothing%20%26%20Accessories",
+	"wffooter-categoriename-clothing-accessories": "Clothing & Accessories",
+	"wffooterlinks-categoriename-decoration": "Decoration",
+	"wffooter-categoriename-decoration": "Decoration",
+	"wffooterlinks-categoriename-electronics": "Electronics",
+	"wffooter-categoriename-electronics": "Electronics",
+	"wffooterlinks-categoriename-Energy": "Energy",
+	"wffooter-categoriename-energy": "Energy",
+	"wffooterlinks-categoriename-food-agriculture": "Food%20%26%20Agriculture",
+	"wffooter-categoriename-food-agriculture": "Food & Agriculture",
+	"wffooterlinks-categoriename-furniture": "Furniture",
+	"wffooter-categoriename-furniture": "Furniture",
+	"wffooterlinks-categoriename-health-wellbeing": "Health%20%26%20Wellbeing",
+	"wffooter-categoriename-health-wellbeing": "Health & Wellbeing",
+	"wffooterlinks-categoriename-music-sound": "Music%20%26%20Sound",
+	"wffooter-categoriename-music-sound": "Music & Sound",
+	"wffooterlinks-categoriename-play-outside": "Play%20%26%20Outside",
+	"wffooter-categoriename-play-outside": "Play & Outside",
+	"wffooterlinks-categoriename-robotics": "Robotics",
+	"wffooter-categoriename-robotics": "Robotics",
+	"wffooterlinks-categoriename-science-biology": "Science%20%26%20Biology",
+	"wffooter-categoriename-science-biology": "Science & Biology",
+	"wffooterlinks-categoriename-transport-mobility": "Transport%20%26%20Mobility",
+	"wffooter-categoriename-transport-mobility": "Transport & Mobility",
+	"wfsearchbar-placeholder": "Search",
+	"wfsearch": "Search a tutorial",
+	"wffooter-recent-changes": "Recent changes",
+	"wffootersubtitle-1": "Wikifab - a non profit organization made with",
+	"wffootersubtitle-2": "by volunteers"
 }
+
