--- a/resources/i18n/fr.json
+++ b/resources/i18n/fr.json
@@ -2,13 +2,81 @@
 	"@metadata": {
 		"authors": [
 			"Gomoko",
-			"Orlodrim"
+			"Orlodrim",
+			"Pierre Boutet"
 		]
 	},
+	"wfexplore": "Explorer les tutoriels",
 	"skinname-chameleon": "Caméléon",
 	"chameleon-desc": "L’habillage Caméléon.",
 	"chameleon-loggedin": "Vous êtes connecté en tant que $1.",
 	"chameleon-notloggedin": "Vous n’êtes pas connecté.",
 	"chameleon-newmessages": "Vous avez de nouveaux messages.",
-	"chameleon-nonewmessages": "Vous n’avez aucun nouveau message."
+	"chameleon-nonewmessages": "Vous n’avez aucun nouveau message.",
+	"wfsearch-newTutorial": "Créer un tutoriel",
+	"wffooterlinks-about": "À propos",
+	"wffooter-about": "À propos",
+	"wffooterlinks-organization": "Organisation",
+	"wffooter-organization": "Organisation",
+	"wffooterlinks-team": "Equipe",
+	"wffooter-team": "Équipe",
+	"wffooterlinks-community": "Communauté",
+	"wffooter-community": "Communauté",
+	"wffooterlinks-press": "Presse",
+	"wffooter-press": "Presse",
+	"wffooterlinks-fablabs": "Fablabs",
+	"wffooter-fablabs": "Fablabs et makerspaces",
+	"wffooterlinks-make-a-donation": "Faire un don",
+	"wffooter-make-a-donation": "Faire un don",
+	"wffooterlinks-developers": "Développeurs",
+	"wffooter-developers": "Développeurs",
+	"wffootertitle-about": "À propos",
+	"wffootertitle-hello": "Bonjour",
+	"wffootertitle-support": "Aide",
+	"wffootertitle-discover": "Découvrir",
+	"wffooterlinks-help": "Aide",
+	"wffooter-help": "Toute l'aide",
+	"wffooterlinks-get-started": "Indispensable",
+	"wffooter-get-started": "L'indispensable",
+	"wffooterlinks-privacy-policy": "Politique de confidentialité",
+	"wffooter-privacy-policy": "Politique de confidentialité",
+	"wffooterlinks-cookie-policy": "Mentions légales",
+	"wffooter-cookie-policy": "Mentions légales",
+	"wffooterlinks-terms-of-use": "Conditions générales",
+	"wffooter-terms-of-use": "Conditions générales",
+	"wffooterlinks-contact": "Contactez_nous",
+	"wffooter-contact": "Contactez-nous",
+	"wffooterlinks-categoriename-art": "Art",
+	"wffooter-categoriename-art": "Art",
+	"wffooterlinks-categoriename-clothing-accessories": "Vêtement%20%26%20Accessoire",
+	"wffooter-categoriename-clothing-accessories": "Vêtement & Accessoire",
+	"wffooterlinks-categoriename-decoration": "Décoration",
+	"wffooter-categoriename-decoration": "Décoration",
+	"wffooterlinks-categoriename-electronics": "Électronique",
+	"wffooter-categoriename-electronics": "Électronique",
+	"wffooterlinks-categoriename-Energy": "Énergie",
+	"wffooter-categoriename-energy": "Énergie",
+	"wffooterlinks-categoriename-food-agriculture": "Alimentation%20%26%20Agriculture",
+	"wffooter-categoriename-food-agriculture": "Alimentation & Agriculture",
+	"wffooterlinks-categoriename-furniture": "Mobilier",
+	"wffooter-categoriename-furniture": "Mobilier",
+	"wffooterlinks-categoriename-health-wellness": "Bien-être%20%26%20Santé",
+	"wffooter-categoriename-health-wellness": "Bien-être & Santés",
+	"wffooterlinks-categoriename-music-sounds": "Musique%20%26%20Sons",
+	"wffooter-categoriename-music-sounds": "Musique & Sons",
+	"wffooterlinks-categoriename-play-outside": "Sport%20%26%20Extérieur",
+	"wffooter-categoriename-play-outside": "Sport & Extérieur",
+	"wffooterlinks-categoriename-robotics": "Robotique",
+	"wffooter-categoriename-robotics": "Robotique",
+	"wffooterlinks-categoriename-science-biology": "Science%20%26%20Biologie",
+	"wffooter-categoriename-science-biology": "Science & Biologie",
+	"wffooterlinks-categoriename-transport-mobility": "Transport",
+	"wffooter-categoriename-transport-mobility": "Transport",
+	"wfsearchbar-placeholder": "Rechercher",
+	"wfsearch": "Rechercher un tutoriel",
+	"wffooter-recent-changes": "Modifications récentes",
+	"wffootersubtitle-1": "Wikifab - une association à but non lucratif gérée avec",
+	"wffootersubtitle-2": "par des passionnés"
 }
+
+
