--- a/resources/i18n/fr.json
+++ b/resources/i18n/fr.json
@@ -16,8 +16,8 @@
 	"wfsearch-newTutorial": "Créer un tutoriel",
 	"wffooterlinks-about": "À propos",
 	"wffooter-about": "À propos",
-	"wffooterlinks-organization": "Organisation",
-	"wffooter-organization": "Organisation",
+	"wffooterlinks-organization": "Fonctionnement",
+	"wffooter-organization": "Fonctionnement",
 	"wffooterlinks-team": "Equipe",
 	"wffooter-team": "Équipe",
 	"wffooterlinks-community": "Communauté",
