--- a/resources/i18n/fr.json
+++ b/resources/i18n/fr.json
@@ -7,6 +7,7 @@
 		]
 	},
 	"wfexplore": "Explorer les tutoriels",
+	"wfTopButton-Tutorial": "Tutoriel",
 	"skinname-chameleon": "Caméléon",
 	"chameleon-desc": "L’habillage Caméléon.",
 	"chameleon-loggedin": "Vous êtes connecté en tant que $1.",
