--- a/resources/i18n/fr.json
+++ b/resources/i18n/fr.json
@@ -61,10 +61,10 @@
 	"wffooter-categoriename-food-agriculture": "Alimentation & Agriculture",
 	"wffooterlinks-categoriename-furniture": "Mobilier",
 	"wffooter-categoriename-furniture": "Mobilier",
-	"wffooterlinks-categoriename-health-wellness": "Bien-être%20%26%20Santé",
-	"wffooter-categoriename-health-wellness": "Bien-être & Santés",
-	"wffooterlinks-categoriename-music-sounds": "Musique%20%26%20Sons",
-	"wffooter-categoriename-music-sounds": "Musique & Sons",
+	"wffooterlinks-categoriename-health-wellbeing": "Bien-être%20%26%20Santé",
+	"wffooter-categoriename-health-wellbeing": "Bien-être & Santé",
+	"wffooterlinks-categoriename-music-sound": "Musique%20%26%20Sons",
+	"wffooter-categoriename-music-sound": "Musique & Sons",
 	"wffooterlinks-categoriename-play-outside": "Sport%20%26%20Extérieur",
 	"wffooter-categoriename-play-outside": "Sport & Extérieur",
 	"wffooterlinks-categoriename-robotics": "Robotique",
