--- a/resources/i18n/en.json
+++ b/resources/i18n/en.json
@@ -35,8 +35,10 @@
 	"wffootertitle-discover": "Discover",
 	"wffooterlinks-help": "Help",
 	"wffooter-help": "Help",
-	"wffooterlinks-get-started": "Get_started",
+	"wffooterlinks-get-started": "Get started",
 	"wffooter-get-started": "Get started",
+	"wffooterlinks-rules": "Rules",
+	"wffooter-rules": "Our rules",
 	"wffooterlinks-privacy-policy": "Privacy_policy",
 	"wffooter-privacy-policy": "Privacy policy",
 	"wffooterlinks-cookie-policy": "Cookie_policy",
