--- a/resources/i18n/fr.json
+++ b/resources/i18n/fr.json
@@ -37,8 +37,10 @@
 	"wffootertitle-discover": "Découvrir",
 	"wffooterlinks-help": "Aide",
 	"wffooter-help": "Toute l'aide",
-	"wffooterlinks-get-started": "Indispensable",
-	"wffooter-get-started": "L'indispensable",
+	"wffooterlinks-get-started": "Premiers pas",
+	"wffooter-get-started": "Premiers pas",
+	"wffooterlinks-rules": "Règles",
+	"wffooter-rules": "Nos règles",
 	"wffooterlinks-privacy-policy": "Politique de confidentialité",
 	"wffooter-privacy-policy": "Politique de confidentialité",
 	"wffooterlinks-cookie-policy": "Mentions légales",
