add category House

--- a/resources/i18n/en.json
+++ b/resources/i18n/en.json
@@ -37,8 +37,8 @@
 	"wffooter-help": "Help",
 	"wffooterlinks-get-started": "Get started",
 	"wffooter-get-started": "Get started",
-	"wffooterlinks-rules": "Rules",
-	"wffooter-rules": "Our rules",
+	"wffooterlinks-best-practices": "Best practices",
+	"wffooter-best-practices": "Best practices",
 	"wffooterlinks-privacy-policy": "Privacy_policy",
 	"wffooter-privacy-policy": "Privacy policy",
 	"wffooterlinks-cookie-policy": "Cookie_policy",
@@ -66,6 +66,8 @@
 	"wffooterlinks-categoriename-health-wellbeing": "Health%20%26%20Wellbeing",
 	"wffooter-categoriename-health-wellbeing": "Health & Wellbeing",
 	"wffooterlinks-categoriename-music-sound": "Music%20%26%20Sound",
+	"wffooterlinks-categoriename-house": "House",
+	"wffooter-categoriename-house": "House",
 	"wffooter-categoriename-music-sound": "Music & Sound",
 	"wffooterlinks-categoriename-play-outside": "Play%20%26%20Outside",
 	"wffooter-categoriename-play-outside": "Play & Outside",
