--- a/resources/i18n/fr.json
+++ b/resources/i18n/fr.json
@@ -39,8 +39,8 @@
 	"wffooter-help": "Toute l'aide",
 	"wffooterlinks-get-started": "Premiers pas",
 	"wffooter-get-started": "Premiers pas",
-	"wffooterlinks-rules": "Règles",
-	"wffooter-rules": "Nos règles",
+	"wffooterlinks-best-practices": "Bonnes pratiques",
+	"wffooter-best-practices": "Bonnes pratiques",
 	"wffooterlinks-privacy-policy": "Politique de confidentialité",
 	"wffooter-privacy-policy": "Politique de confidentialité",
 	"wffooterlinks-cookie-policy": "Mentions légales",
@@ -63,6 +63,8 @@
 	"wffooter-categoriename-food-agriculture": "Alimentation & Agriculture",
 	"wffooterlinks-categoriename-furniture": "Mobilier",
 	"wffooter-categoriename-furniture": "Mobilier",
+	"wffooterlinks-categoriename-house": "Maison",
+	"wffooter-categoriename-house": "Maison",
 	"wffooterlinks-categoriename-health-wellbeing": "Bien-être%20%26%20Santé",
 	"wffooter-categoriename-health-wellbeing": "Bien-être & Santé",
 	"wffooterlinks-categoriename-music-sound": "Musique%20%26%20Sons",
