Adding Tools & Machines and Recyling & Upcycling categories

--- a/resources/i18n/en.json
+++ b/resources/i18n/en.json
@@ -68,6 +68,10 @@
 	"wffooterlinks-categoriename-music-sound": "Music%20%26%20Sound",
 	"wffooterlinks-categoriename-house": "House",
 	"wffooter-categoriename-house": "House",
+	"wffooterlinks-categoriename-recycling-upcycling": "Recycling%20%26%20Upcycling",
+	"wffooter-categoriename-house": "Recycling & Upcycling",
+	"wffooterlinks-categoriename-machines-tools": "Machines%20%26%20Tools",
+	"wffooter-categoriename-machines-tools": "Machines & Tools",
 	"wffooter-categoriename-music-sound": "Music & Sound",
 	"wffooterlinks-categoriename-play-outside": "Play%20%26%20Outside",
 	"wffooter-categoriename-play-outside": "Play & Outside",
