--- a/resources/i18n/fr.json
+++ b/resources/i18n/fr.json
@@ -65,6 +65,10 @@
 	"wffooter-categoriename-furniture": "Mobilier",
 	"wffooterlinks-categoriename-house": "Maison",
 	"wffooter-categoriename-house": "Maison",
+	"wffooterlinks-categoriename-recycling-upcycling": "Recyclage%20%26%20Upcycling",
+	"wffooter-categoriename-house": "Recyclage & Upcycling",
+	"wffooterlinks-categoriename-machines-tools": "Machines%20%26%20Outils",
+	"wffooter-categoriename-machines-tools": "Machines & Outils",
 	"wffooterlinks-categoriename-health-wellbeing": "Bien-être%20%26%20Santé",
 	"wffooter-categoriename-health-wellbeing": "Bien-être & Santé",
 	"wffooterlinks-categoriename-music-sound": "Musique%20%26%20Sons",
