correct footer link

--- a/resources/i18n/en.json
+++ b/resources/i18n/en.json
@@ -65,6 +65,7 @@
 	"wffooter-categoriename-furniture": "Furniture",
 	"wffooterlinks-categoriename-health-wellbeing": "Health%20%26%20Wellbeing",
 	"wffooter-categoriename-health-wellbeing": "Health & Wellbeing",
+	"wffooterlinks-categoriename-play-recreation": "Play%20%26%20Recreation",
 	"wffooter-categoriename-play-recreation": "Play & Recreation",
 	"wffooterlinks-categoriename-music-sound": "Music%20%26%20Sound",
 	"wffooterlinks-categoriename-house": "House",
