--- a/resources/i18n/fr.json
+++ b/resources/i18n/fr.json
@@ -70,6 +70,7 @@
 	"wffooterlinks-categoriename-machines-tools": "Machines%20%26%20Outils",
 	"wffooter-categoriename-machines-tools": "Machines & Outils",
 	"wffooterlinks-categoriename-health-wellbeing": "Bien-être%20%26%20Santé",
+	"wffooterlinks-categoriename-play-recreation": "Jeux%20%26%20Loisirs",
 	"wffooter-categoriename-play-recreation": "Jeux & Loisirs",
 	"wffooter-categoriename-health-wellbeing": "Bien-être & Santé",
 	"wffooterlinks-categoriename-music-sound": "Musique%20%26%20Sons",
