Code lang in footer links

--- a/resources/i18n/fr.json
+++ b/resources/i18n/fr.json
@@ -49,23 +49,40 @@
 	"wffooter-terms-of-use": "Conditions générales",
 	"wffooterlinks-contact": "Contactez_nous",
 	"wffooter-contact": "Contactez-nous",
+	"wffooterlinks-categoriename-art": "Art",
 	"wffooter-categoriename-art": "Art",
+	"wffooterlinks-categoriename-clothing-accessories": "Vêtement%20%26%20Accessoire",
 	"wffooter-categoriename-clothing-accessories": "Vêtement & Accessoire",
+	"wffooterlinks-categoriename-decoration": "Décoration",
 	"wffooter-categoriename-decoration": "Décoration",
+	"wffooterlinks-categoriename-electronics": "Électronique",
 	"wffooter-categoriename-electronics": "Électronique",
+	"wffooterlinks-categoriename-energy": "Énergie",
 	"wffooter-categoriename-energy": "Énergie",
+	"wffooterlinks-categoriename-food-agriculture": "Alimentation%20%26%20Agriculture",
 	"wffooter-categoriename-food-agriculture": "Alimentation & Agriculture",
+	"wffooterlinks-categoriename-furniture": "Mobilier",
 	"wffooter-categoriename-furniture": "Mobilier",
+	"wffooterlinks-categoriename-house": "Maison",
 	"wffooter-categoriename-house": "Maison",
+	"wffooterlinks-categoriename-recycling-upcycling": "Recyclage%20%26%20Upcycling",
 	"wffooter-categoriename-recycling-upcycling": "Recyclage & Upcycling",
+	"wffooterlinks-categoriename-machines-tools": "Machines%20%26%20Outils",
 	"wffooter-categoriename-machines-tools": "Machines & Outils",
+	"wffooterlinks-categoriename-health-wellbeing": "Bien-être%20%26%20Santé",
+	"wffooterlinks-categoriename-play-recreation": "Jeux%20%26%20Loisirs",
 	"wffooter-categoriename-play-recreation": "Jeux & Loisirs",
 	"wffooter-categoriename-health-wellbeing": "Bien-être & Santé",
+	"wffooterlinks-categoriename-music-sound": "Musique%20%26%20Sons",
 	"wffooter-categoriename-music-sound": "Musique & Sons",
+	"wffooterlinks-categoriename-play-outside": "Sport%20%26%20Extérieur",
 	"wffooter-categoriename-play-outside": "Sport & Extérieur",
+	"wffooterlinks-categoriename-robotics": "Robotique",
 	"wffooter-categoriename-robotics": "Robotique",
+	"wffooterlinks-categoriename-science-biology": "Science%20%26%20Biologie",
 	"wffooter-categoriename-science-biology": "Science & Biologie",
-	"wffooter-categoriename-transport-mobility": "Transport & Mobilité",
+	"wffooterlinks-categoriename-transport-mobility": "Transport",
+	"wffooter-categoriename-transport-mobility": "Transport",
 	"wfsearchbar-placeholder": "Rechercher",
 	"wfsearch": "Rechercher un tutoriel",
 	"wffooter-recent-changes": "Modifications récentes",
