--- a/resources/i18n/fr.json
+++ b/resources/i18n/fr.json
@@ -55,8 +55,7 @@
 	"wfsearchbar-placeholder": "Rechercher",
 	"wfsearch": "Rechercher un tutoriel",
 	"wffooter-recent-changes": "Modifications récentes",
-	"wffootersubtitle-1": "Wikifab - une association à but non lucratif gérée avec",
-	"wffootersubtitle-2": "par des passionnés",
+	"wffootersubtitle": "Wikifab.org",
 	"wfprint-pagelink": "URL du tutoriel : $1",
 	"wfprint-versionnumber": "Dernière modification le $1, à $2."
 }
