Ajouter un onglet "Commentaire" dans onglet des pages

--- a/resources/i18n/fr.json
+++ b/resources/i18n/fr.json
@@ -14,6 +14,7 @@
 	"chameleon-notloggedin": "Vous n’êtes pas connecté.",
 	"chameleon-newmessages": "Vous avez de nouveaux messages.",
 	"chameleon-nonewmessages": "Vous n’avez aucun nouveau message.",
+	"chameleon-comments": "Commentaires",
 	"wfsearch-newTutorial": "Créer un tutoriel",
 	"wffooterlinks-about": "À propos",
 	"wffooter-about": "À propos",
